--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,11 @@ steps:
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)'
   displayName: 'Install Node.js'
 
 - script: |
     npm install
     npm run build
   displayName: 'npm install and build'
+  
